# ecom-recommender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
configs/: settings.py
src/data/: preprocessors.py
src/models/: mlp_model.py  model_factory.py  popularity_model.py
src/utils/: interfaces.py
tests/unit/: test_model_factory.py  test_popularity_model.py  test_preprocessors.py
