[tool.poetry]
name = "movielens-recommender"
version = "0.1.0"
description = "Sistema de recomendacao de filmes baseado no dataset MovieLens"
authors = ["Ahmed Bakri"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
scikit-learn = "^1.5.0"
mlflow = "^2.13.0"
dvc = "^3.51.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"
scipy = "^1.13.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
pre-commit = "^3.7.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"